解耦dao层程序
